istio/addon_traffic.yaml
---
##################
# Grafana
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http2-grafana
      protocol: HTTP2
    hosts:
    - "grafana.${DOMAIN_NAME}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.${DOMAIN_NAME}"
  gateways:
  - grafana-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
##################
# Jaeger
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http2-tracing
      protocol: HTTP2
    hosts:
    - "jaeger.${DOMAIN_NAME}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
  - "jaeger.${DOMAIN_NAME}"
  gateways:
  - tracing-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
##################
# Kiali
##################
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http2-kiali
      protocol: HTTP2
    hosts:
    - "kiali.${DOMAIN_NAME}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.${DOMAIN_NAME}"
  gateways:
  - kiali-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
#---
###################
## Prometheus
###################
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: prometheus-gateway
#  namespace: istio-system
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#  - port:
#      number: 80
#      name: http2-prometheus
#      protocol: HTTP2
#    hosts:
#    - "prometheus.${DOMAIN_NAME}"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: prometheus-vs
#  namespace: istio-system
#spec:
#  hosts:
#  - "prometheus.${DOMAIN_NAME}"
#  gateways:
#  - prometheus-gateway
#  http:
#  - match:
#    - port: 80
#    route:
#    - destination:
#        host: prometheus.istio-system.svc.cluster.local
#        port:
#          number: 9090
#---
##################
# Servicegraph
##################

#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: servicegraph-destination-rule
#  namespace: istio-system
#spec:
#  host: servicegraph.istio-system.svc.cluster.local
#  trafficPolicy:
#    tls:
#      mode: DISABLE
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: servicegraph-virtual-service
#  namespace: istio-system
#spec:
#  hosts:
#  - "servicegraph.${DOMAIN_NAME}"
#  gateways:
#  - istio-autogenerated-k8s-ingress
#  http:
#  - route:
#    - destination:
#        host: servicegraph.istio-system.svc.cluster.local
#        port:
#          number: 8088
